# Conways-Game

./: CMakeLists.txt  LifeSimulator.cpp  LifeSimulator.hpp  Pattern.hpp  PatternAcorn.cpp  PatternAcorn.hpp  PatternBlinker.cpp  PatternBlinker.hpp  PatternBlock.cpp  PatternBlock.hpp  PatternGlider.cpp  PatternGlider.hpp  PatternGosperGliderGun.cpp  PatternGosperGliderGun.hpp  Renderer.hpp  RendererConsole.cpp  RendererConsole.hpp  main.cpp
